--- a/lab-02/index.html
+++ b/lab-02/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<header>
+    <h1>Your page title</h1>
+</header>
+<main>
     <nav>
         <a href="#">Home</a>
         <a href="#">Blog</a>
@@ -7,8 +11,24 @@
         <a href="#">Contact</a>
         <a href="#">About</a>
     </nav>
-    <head>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body></body>
+    <section>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.
+        </p>
+        <a href="#">myTrigger</a>
+    </section>
+</main>
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body></body>
+
 </html>
